# coherence-framework

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COHERENCE_INDEX.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  lean.yml
Coherence_Spec_v1_0/: README.md
Coherence_Spec_v1_0/docs/: 01_Coherence_Principle.md  02_Formal_Definitions.md  03_Axioms_and_Postulates.md  04_Coherence_Functionals.md  05_Coherence_Transport_and_Balance.md  06_Gates_Rails_and_Affordability.md  07_Coherence_Lemmas_Operational.md  08_Algorithms_Canonical.md  09_Receipts_Ledgers_and_Certificates.md  10_Verification_and_Test_Plan.md  11_Failure_Modes_and_Recovery.md  12_Glossary_and_Lexicon.md  13_Bridge_Notes_Time_GR_PDE_AI.md  14_Coherence_Governance_Kernel.md
Coherence_Spec_v1_0/examples/: certificate.example.json  gate_policy.example.json  receipt.example.json
Coherence_Spec_v1_0/manifest/: manifest.md
Coherence_Spec_v1_0/schemas/: coherence_receipt.schema.json  gate_policy.schema.json  run_certificate.schema.json
coherence_math_spine/: 00_manifest.yaml  01_notation.md  02_state_spaces.md  03_residual_maps.md  04_debt_functionals.md  05_gated_dynamics.md  06_stability_theorems.md  07_multiscale_barriers.md  08_certificates.md  09_examples.md  README.md
coherence_math_spine/lean/: SmallGain.lean
coherence_spine/: 00_manifest.yaml  CHANGELOG.md  README.md
scripts/: check_lean_smallgain.sh
(+17 files in other folders)
